--- a/screw-components-frontend/package.json
+++ b/screw-components-frontend/package.json
@@ -8,6 +8,7 @@
   },
   "dependencies": {
     "@element-plus/icons-vue": "^2.0.9",
+    "@iconify/vue": "^4.1.2",
     "axios": "^0.27.2",
     "element-plus": "^2.2.13",
     "lodash": "^4.17.21",
@@ -19,6 +20,7 @@
   },
   "devDependencies": {
     "@iconify-json/ep": "^1.1.7",
+    "@iconify-json/material-symbols": "^1.1.85",
     "@types/lodash": "^4.14.185",
     "@types/node": "^18.7.6",
     "@types/nprogress": "^0.2.0",
@@ -36,7 +38,6 @@
     "sass": "^1.54.4",
     "typescript": "^4.6.4",
     "unplugin-auto-import": "^0.11.1",
-    "unplugin-icons": "^0.14.8",
     "unplugin-vue-components": "^0.22.4",
     "unplugin-vue-define-options": "^0.10.0",
     "vite": "^3.0.7",
