--- a/screw-components-frontend/package.json
+++ b/screw-components-frontend/package.json
@@ -12,6 +12,7 @@
     "axios": "^0.27.2",
     "element-plus": "^2.2.13",
     "lodash": "^4.17.21",
+    "nanoid": "^5.0.7",
     "nprogress": "^0.2.0",
     "pinia": "^2.0.18",
     "qs": "^6.11.0",
