--- a/screw-components-frontend/package.json
+++ b/screw-components-frontend/package.json
@@ -13,10 +13,12 @@
     "element-plus": "^2.2.13",
     "lodash": "^4.17.21",
     "mathjs": "^13.0.3",
+    "mitt": "^3.0.1",
     "nanoid": "^5.0.7",
     "nprogress": "^0.2.0",
     "pinia": "^2.0.18",
     "qs": "^6.11.0",
+    "v-image": "^3.1.2",
     "vue": "^3.2.37",
     "vue-router": "4"
   },
