--- a/screw-components-frontend/package.json
+++ b/screw-components-frontend/package.json
@@ -7,6 +7,7 @@
     "build:com": "vue-tsc --noEmit && vite build"
   },
   "dependencies": {
+    "@dcloudio/uni-ui": "^1.5.6",
     "@element-plus/icons-vue": "^2.0.9",
     "@iconify/vue": "^4.1.2",
     "axios": "^0.27.2",
@@ -18,6 +19,7 @@
     "nprogress": "^0.2.0",
     "pinia": "^2.0.18",
     "qs": "^6.11.0",
+    "sass-loader": "8",
     "v-image": "^3.1.2",
     "vue": "^3.2.37",
     "vue-router": "4"
